--- a/ProyectoTECWEB/Back/package.json
+++ b/ProyectoTECWEB/Back/package.json
@@ -19,9 +19,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
+    "snowball-stemmers": "^0.6.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "snowball-stemmers": "^0.6.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
