--- a/ProyectoTECWEB/Back/package.json
+++ b/ProyectoTECWEB/Back/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "description": "",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "jest"
   },
   "keywords": [],
